crates/clan/clan-core/tests/snapshots/clan_golden__dss_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Utterances scored: 1
  Grand total: 4
  DSS score: 4.00

Speaker: MOT
  Utterances scored: 1
  Grand total: 3
  DSS score: 3.00
