crates/clan/clan-core/tests/snapshots/clan_golden__dss_speaker_spe@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: SPE
  Utterances scored: 2
  Grand total: 8
  DSS score: 4.00
