crates/clan/clan-core/tests/snapshots/clan_golden__eval_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: GES
  Metric           Value
  ---------------  -----
  Utterances       3    
  Total words      13   
  NDW (types)      11   
  TTR              0.846
  MLU (words)      4.33 
  MLU (morphemes)  12.00
  Nouns            0    
  Verbs            4    
  Auxiliaries      0    
  Modals           0    
  Prepositions     0    
  Adjectives       0    
  Adverbs          0    
  Conjunctions     0    
  Determiners      2    
  Pronouns         1    
  Word errors      0    

Speaker: SPE
  Metric           Value
  ---------------  -----
  Utterances       2    
  Total words      15   
  NDW (types)      13   
  TTR              0.867
  MLU (words)      7.50 
  MLU (morphemes)  20.50
  Nouns            0    
  Verbs            4    
  Auxiliaries      0    
  Modals           0    
  Prepositions     0    
  Adjectives       0    
  Adverbs          0    
  Conjunctions     0    
  Determiners      2    
  Pronouns         2    
  Word errors      0
