crates/clan/clan-core/tests/snapshots/clan_golden__eval_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Metric           Value
  ---------------  -----
  Utterances       1    
  Total words      4    
  NDW (types)      4    
  TTR              1.000
  MLU (words)      4.00 
  MLU (morphemes)  6.00 
  Nouns            0    
  Verbs            1    
  Auxiliaries      1    
  Modals           0    
  Prepositions     0    
  Adjectives       0    
  Adverbs          0    
  Conjunctions     0    
  Determiners      0    
  Pronouns         2    
  Word errors      0    

Speaker: MOT
  Metric           Value
  ---------------  -----
  Utterances       1    
  Total words      4    
  NDW (types)      4    
  TTR              1.000
  MLU (words)      4.00 
  MLU (morphemes)  4.00 
  Nouns            0    
  Verbs            1    
  Auxiliaries      1    
  Modals           0    
  Prepositions     0    
  Adjectives       0    
  Adverbs          0    
  Conjunctions     0    
  Determiners      0    
  Pronouns         2    
  Word errors      0
