crates/clan/clan-core/tests/snapshots/clan_golden__eval_speaker_spe@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: SPE
  Metric           Value
  ---------------  -----
  Utterances       2    
  Total words      15   
  NDW (types)      13   
  TTR              0.867
  MLU (words)      7.50 
  MLU (morphemes)  20.50
  Nouns            0    
  Verbs            4    
  Auxiliaries      0    
  Modals           0    
  Prepositions     0    
  Adjectives       0    
  Adverbs          0    
  Conjunctions     0    
  Determiners      2    
  Pronouns         2    
  Word errors      0
