crates/clan/clan-core/tests/snapshots/clan_golden__flucalc_retrace@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Metric           Value
  ---------------  -----
  Prolongations    0    
  Broken words     0    
  Blocks           0    
  Part-word reps   0    
  Whole-word reps  1    
  Total SLD        1    
  Phrase reps      1    
  Revisions        1    
  Filled pauses    0    
  Phon fragments   0    
  Total TD         2    
  Total words      12   
  SLD %            8.3% 
  TD %             16.7%

Speaker: MOT
  Metric           Value
  ---------------  -----
  Prolongations    0    
  Broken words     0    
  Blocks           0    
  Part-word reps   0    
  Whole-word reps  0    
  Total SLD        0    
  Phrase reps      0    
  Revisions        1    
  Filled pauses    0    
  Phon fragments   0    
  Total TD         1    
  Total words      15   
  SLD %            0.0% 
  TD %             6.7%
