crates/clan/clan-core/tests/snapshots/clan_golden__flucalc_speaker_chi@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Metric           Value
  ---------------  -----
  Prolongations    0    
  Broken words     0    
  Blocks           0    
  Part-word reps   0    
  Whole-word reps  1    
  Total SLD        1    
  Phrase reps      1    
  Revisions        1    
  Filled pauses    0    
  Phon fragments   0    
  Total TD         2    
  Total words      12   
  SLD %            8.3% 
  TD %             16.7%
