crates/clan/clan-core/tests/snapshots/clan_golden__freq_ca@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
Speaker: *SPK:
  1 a
  1 b
  1 c
  1 d
  1 one
  1 two
------------------------------
    6  Total number of different item types used
    6  Total number of items (tokens)
1.000  Type/Token ratio
    This TTR number was not calculated on the basis of %mor line forms.
    If you want a TTR based on lemmas, run FREQ on the %mor line
    with option: +sm;*,o%

Speaker: *LSN:
  1 e
  1 f
  1 g
  1 h
  1 one
  1 two
------------------------------
    6  Total number of different item types used
    6  Total number of items (tokens)
1.000  Type/Token ratio
    This TTR number was not calculated on the basis of %mor line forms.
    If you want a TTR based on lemmas, run FREQ on the %mor line
    with option: +sm;*,o%
