crates/clan/clan-core/tests/snapshots/clan_golden__freq_ca@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: SPK
  Total types: 6
  Total tokens: 6
  TTR: 1.000
  Count  Word
  -----  ----
  1      a   
  1      b   
  1      c   
  1      d   
  1      one 
  1      two 

Speaker: LSN
  Total types: 6
  Total tokens: 6
  TTR: 1.000
  Count  Word
  -----  ----
  1      e   
  1      f   
  1      g   
  1      h   
  1      one 
  1      two
