crates/clan/clan-core/tests/snapshots/clan_golden__freq_eng@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
Speaker: *SPE:
  1 Triangle
  1 and
  1 going
  1 got
  2 he
  1 hill
  1 kept
  2 the
  1 to
  1 top
  1 twirled
  1 until
  1 up
------------------------------
   13  Total number of different item types used
   15  Total number of items (tokens)
0.867  Type/Token ratio
    This TTR number was not calculated on the basis of %mor line forms.
    If you want a TTR based on lemmas, run FREQ on the %mor line
    with option: +sm;*,o%

Speaker: *GES:
  1 angle
  1 going
  1 got
  1 he
  1 hill
  1 kept
  2 the
  2 to
  1 twirled
  1 until
  1 up
------------------------------
   11  Total number of different item types used
   13  Total number of items (tokens)
0.846  Type/Token ratio
    This TTR number was not calculated on the basis of %mor line forms.
    If you want a TTR based on lemmas, run FREQ on the %mor line
    with option: +sm;*,o%
