crates/clan/clan-core/tests/snapshots/clan_golden__freq_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: SPE
  Total types: 13
  Total tokens: 15
  TTR: 0.867
  Count  Word    
  -----  --------
  2      he      
  2      the     
  1      and     
  1      going   
  1      got     
  1      hill    
  1      kept    
  1      to      
  1      top     
  1      triangle
  1      twirled 
  1      until   
  1      up      

Speaker: GES
  Total types: 11
  Total tokens: 13
  TTR: 0.846
  Count  Word   
  -----  -------
  2      the    
  2      to     
  1      angle  
  1      going  
  1      got    
  1      he     
  1      hill   
  1      kept   
  1      twirled
  1      until  
  1      up
