crates/clan/clan-core/tests/snapshots/clan_golden__freq_eng_mor_tier@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
Speaker: *SPE:
  1 adp|to
  1 adp|up
  1 cconj|and
  2 det|the-Def-Art
  1 noun|hill
  1 noun|top
  1 noun|triangle
  2 pron|he-Prs-Nom-S3
  1 sconj|until
  1 verb|get-Fin-Ind-Past-S3-irr
  1 verb|go-Ger-S
  1 verb|keep-Fin-Ind-Past-S3-irr
  1 verb|twirl-Fin-Ind-Past-S3
------------------------------
   13  Total number of different item types used
   15  Total number of items (tokens)
0.867  Type/Token ratio

Speaker: *GES:
  1 adp|to
  1 adp|up
  2 det|the-Def-Art
  1 noun|angle
  1 noun|hill-Acc
  1 noun|to
  1 pron|he-Prs-Nom-S3
  1 sconj|until
  1 verb|get-Fin-Ind-Past-S3-irr
  1 verb|go-Ger-S
  1 verb|keep-Part-Past-S-irr
  1 verb|twirl-Fin-Ind-Past-S1
------------------------------
   12  Total number of different item types used
   13  Total number of items (tokens)
0.923  Type/Token ratio
